--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,17 +1,26 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Iniciar</ion-title>
+    <ion-title class="ion-text-center">Soccer Match</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <form class="form" [formGroup]="validationsForm"  (ngSubmit)="loginUser(validationsForm.value)">
-    
 
-    
+<br>
+<div style="text-align: center !important;">
+
+  <img src="../../../../assets/img/appicon.png" style="height: 70px; width: 70px;"/>
+
+</div>
+
+<ion-content class="ion-padding-top">
+  <ion-card class="ion-padding-top">
+
+  <p class="ion-text-center">Iniciar Sesión</p>
+
+  <form class="form ion-padding-start ion-padding-end" [formGroup]="validationsForm"  (ngSubmit)="loginUser(validationsForm.value)">
 
     <ion-item>
-      <ion-label  position="floating" color="primary">Email</ion-label>
+      <ion-label position="floating" color="primary">Correo</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -23,7 +32,7 @@
     </div>
 
     <ion-item>
-      <ion-label  position="floating" color="primary">Password</ion-label>
+      <ion-label  position="floating" color="primary">Contraseña</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -34,12 +43,24 @@
       </ng-container>
     </div>
 
-
-    <ion-button  class="submit-btn" type="submit"  [disabled]="!validationsForm.valid">Log In</ion-button>
-
+    <div class="ion-text-center ion-padding-top">
+    <ion-button  class="submit-btn" type="submit"  [disabled]="!validationsForm.valid">INGRESAR</ion-button>
+    </div>
     <label class="error-message">{{errorMessage}}</label>
   </form>
-  <p class="go-to-register">
-    No account yet? <a (click)="goToRegisterPage()">Create an account.</a>
-  </p>
+
+  
+  <p class="go-to-register ion-text-center"><a (click)="goToRegisterPage()">Olvido su contraseña?</a></p>
+
+</ion-card>
+
+<div class="ion-padding ion-text-center">
+
+  <p>Registro</p>
+ 
+  <ion-button (click)="goToRegisterPage()" expand="full" color="primary">Email</ion-button>
+  <ion-button expand="full" color="google">Google</ion-button>
+
+</div>
+
 </ion-content>
