--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,13 +76,31 @@
   --ion-color-dark-shade: #190e60;
   --ion-color-dark-tint: #2e256d;
 
+
+  --ion-color-google: #dd4b39;
+  --ion-color-google-rgb: 34,34,34;
+  --ion-color-google-contrast: #fff;
+  --ion-color-google-contrast-rgb: 255,255,255;
+  --ion-color-google-shade: #dd4b39;
+  --ion-color-google-tint: #dd4b39;
+
+
   --ion-color-base : #fff;
 }
 
 .ion-color-secundary{
-  --ion-color-base: #fff;
+  --ion-color-contrast: #fff;
 }
 
 .ion-color-primary{
-  --ion-color-base: #fff;
+  --ion-color-contrast: #fff;
+}
+
+.ion-color-google {
+  --ion-color-base: var(--ion-color-google) !important;
+  --ion-color-base-rgb: var(--ion-color-google-rgb) !important;
+  --ion-color-contrast: var(--ion-color-google-contrast) !important;
+  --ion-color-contrast-rgb: var(--ion-color-google-contrast-rgb) !important;
+  --ion-color-shade: var(--ion-color-google-shade) !important;
+  --ion-color-tint: var(--ion-color-google-tint) !important;
 }
