--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -16,7 +16,7 @@
 
     <ion-card class="ion-text-center" *ngIf="!isUploading && !isUploaded">
       <ion-card-header>
-        <ion-card-title>Foto de la chancha</ion-card-title>
+        <ion-card-title>Foto de Perfil</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <div class="fileUpload btn btn-primary">
