--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -7,10 +7,42 @@
   </ion-toolbar>
 </ion-header>
 <ion-content >
-
  
-    
+  
+  <ion-card class="ion-text-center" *ngIf="!isUploading && !isUploaded">
+    <ion-card-header>
+      <ion-card-title>Foto de Perfil</ion-card-title>
+    </ion-card-header>
+  <ion-card-content>
+    <img src="https://firebasestorage.googleapis.com/v0/b/soccermatch-43e4e.appspot.com/o/SoccerMatchStorage%2F1583696591561_IMG-20200305-WA0055.jpg?alt=media&token=88f63c55-531b-47ca-871f-c1e2beb770d5" alt="" style="width: 100px; height: 100px;">
+  </ion-card-content>
+  </ion-card>
+ 
+  <ion-item>
+    <ion-label position="floating">Id</ion-label>
+    <ion-input [(ngModel)]="usuario.id"></ion-input>
+  </ion-item>
 
+  <ion-item>
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input [(ngModel)]="usuario.nombre"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Apellidos</ion-label>
+    <ion-input [(ngModel)]="usuario.apellidos"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Correo</ion-label>
+    <ion-input [(ngModel)]="usuario.correo"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Fecha Nacimiento</ion-label>
+    <ion-input [(ngModel)]="usuario.fechaNacimiento"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Telefono</ion-label>
+    <ion-input [(ngModel)]="usuario.telefono"></ion-input>
+  </ion-item>
 
 
 </ion-content>
