--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -35,10 +35,14 @@
     <ion-label position="floating">Correo</ion-label>
     <ion-input [(ngModel)]="usuario.correo"></ion-input>
   </ion-item>
+
   <ion-item>
     <ion-label position="floating">Fecha Nacimiento</ion-label>
-    <ion-input [(ngModel)]="usuario.fechaNacimiento"></ion-input>
+    <ion-datetime  [(ngModel)]="usuario.fechaNacimiento" display-format="DD/MMMM/YYYY"
+    monthNames='Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre'
+    doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
   </ion-item>
+
   <ion-item>
     <ion-label position="floating">Telefono</ion-label>
     <ion-input [(ngModel)]="usuario.telefono"></ion-input>
