--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -6,17 +6,11 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content >
+<ion-content class="ion-padding-top" >
  
   
-  <ion-card class="ion-text-center" *ngIf="!isUploading && !isUploaded">
-    <ion-card-header>
-      <ion-card-title>Foto de Perfil</ion-card-title>
-    </ion-card-header>
-  <ion-card-content>
-    <img src="https://firebasestorage.googleapis.com/v0/b/soccermatch-43e4e.appspot.com/o/SoccerMatchStorage%2F1583696591561_IMG-20200305-WA0055.jpg?alt=media&token=88f63c55-531b-47ca-871f-c1e2beb770d5" alt="" style="width: 100px; height: 100px;">
-  </ion-card-content>
-  </ion-card>
+  
+  <div class="ion-text-center"><img src="https://firebasestorage.googleapis.com/v0/b/soccermatch-43e4e.appspot.com/o/SoccerMatchStorage%2F1583696591561_IMG-20200305-WA0055.jpg?alt=media&token=88f63c55-531b-47ca-871f-c1e2beb770d5" alt="" style="width: 100px; height: 100px;"></div>
  
   <ion-item>
     <ion-label position="floating">Id</ion-label>
