Mantenimiento de cancha

--- a/src/app/pages/maintenance/cancha/cancha.page.html
+++ b/src/app/pages/maintenance/cancha/cancha.page.html
@@ -21,7 +21,7 @@
             <h3></h3>
             <p>{{cancha.direccion}}</p>
           </ion-label>
-          <ion-button fill="outline" slot="end">
+          <ion-button fill="outline" slot="end" (click)="editar(cancha);">
             Editar
           </ion-button>
         </ion-item>
