--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -39,7 +39,10 @@
 
             <ion-item>
                 <ion-label position="floating" color="primary">Telefono</ion-label>
-                <ion-input type="text" formControlName="telefono"></ion-input>
+                <ion-input   formControlName="telefono"
+                             mask="0000-0000"
+                             type="text"
+                             maxlength="9" ></ion-input>
             </ion-item>
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.telefono">
