--- a/src/app/components/olvido-contrasenia/olvido-contrasenia.component.html
+++ b/src/app/components/olvido-contrasenia/olvido-contrasenia.component.html
@@ -17,7 +17,7 @@
 
   <p class="ion-text-center">Digite su correo para restablecer su contrasena</p>
 
-  <form class="form ion-padding-start ion-padding-end" [formGroup]="validationsForm"  (ngSubmit)="loginUser(validationsForm.value)">
+  <form class="form ion-padding-start ion-padding-end" [formGroup]="validationsForm"  (ngSubmit)="forgetPass(validationsForm.value)">
 
     <ion-item>
       <ion-label position="floating" color="primary">Correo</ion-label>
