--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -58,9 +58,18 @@
 
   <p>Registro</p>
  
-  <ion-button (click)="goToRegisterPage()" expand="full" color="primary">Email</ion-button>
-  <ion-button expand="full" color="google">Google</ion-button>
+  <ion-button (click)="goToRegisterPage()" expand="full" color="secondary">
+    <ion-icon md="correo-electronico"></ion-icon>
+    &nbsp;
+    Correo
+  </ion-button>
+  <ion-button expand="full" color="google">
+    <ion-icon md="google"></ion-icon> &nbsp; Google
+  </ion-button>
 
 </div>
+
+
+
 
 </ion-content>
