--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,7 +5,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #1b5e20;
+  --ion-color-primary: #002671;
   --ion-color-primary-rgb: 72,138,255;
   --ion-color-primary-contrast: #fff;
   --ion-color-primary-contrast-rgb: 255,255,255;
@@ -13,7 +13,7 @@
   --ion-color-primary-tint: #4c8c4a;
 
   /** secondary **/
-  --ion-color-secondary: #003300;
+  --ion-color-secondary: #326195;
   --ion-color-secondary-rgb: 50,219,100;
   --ion-color-secondary-contrast: #fff;
   --ion-color-secondary-contrast-rgb: 255,255,255;
