mostrar reservas, segu horario y dias disponibles

--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -169,7 +169,7 @@
                             <ion-label position="floating">Inicio</ion-label>
                             <ion-datetime name="horaInicio" [(ngModel)]="canchaObjeto.horario.horaInicio"
                                           cancelText="Cancelar" required doneText="Aceptar"
-                                          displayFormat="h a"></ion-datetime>
+                                          displayFormat="H"></ion-datetime>
                         </ion-item>
                     </ion-col>
 
@@ -178,7 +178,7 @@
                             <ion-label position="floating">Fin</ion-label>
                             <ion-datetime name="horaFin" [(ngModel)]="canchaObjeto.horario.horaFin"
                                           cancelText="Cancelar" required doneText="Aceptar"
-                                          displayFormat="h a"></ion-datetime>
+                                          displayFormat="H"></ion-datetime>
                         </ion-item>
                     </ion-col>
 
