--- a/src/app/components/crear-reserva/crear-reserva.component.html
+++ b/src/app/components/crear-reserva/crear-reserva.component.html
@@ -1,76 +1,99 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title class="ion-text-center">Crear Reserva</ion-title>
-    <ion-buttons slot="start">
-      <ion-button (click)="cerrarModal()">
-        <ion-icon style="font-size: 25px;" md="close-circle"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title class="">Crear Reserva</ion-title>
+        <ion-buttons slot="start">
+            <ion-button (click)="cerrarModal()">
+                <ion-icon style="font-size: 25px;" md="close-circle"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="canchas.length == 0">
-    <ion-card-header class="ion-text-center">
-      <ion-card-title>Parámetros</ion-card-title>
-    </ion-card-header>
+    <ion-card *ngIf="canchas.length == 0">
+        <ion-card-header class="ion-text-center">
+            <ion-card-title>Parámetros</ion-card-title>
+        </ion-card-header>
 
-    <ion-card-content>
+        <ion-card-content>
 
-      <ion-item>
-        <ion-label position="floating">Provincia</ion-label>
-        <ion-select [(ngModel)]="codProvincia" (ionChange)="changeProvincia()"
-                    interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
-          <ion-select-option *ngFor="let ubi of ubicacion" value="{{ubi.codigoProvincia}}">{{ubi.descripcion}}</ion-select-option>
-        </ion-select>
-      </ion-item>
+            <ion-item>
+                <ion-label position="floating">Provincia</ion-label>
+                <ion-select [(ngModel)]="codProvincia" (ionChange)="changeProvincia()"
+                            interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
+                    <ion-select-option *ngFor="let ubi of ubicacion"
+                                       value="{{ubi.codigoProvincia}}">{{ubi.descripcion}}</ion-select-option>
+                </ion-select>
+            </ion-item>
 
 
-      <ion-item *ngIf="provincia">
-        <ion-label position="floating">Cantón</ion-label>
-        <ion-select [(ngModel)]="codCanton" interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
-          <ion-select-option *ngFor="let cant of provincia.canton" value="{{cant.codigoCanton}}">{{cant.descripcion}}</ion-select-option>
-        </ion-select>
-      </ion-item>
+            <ion-item *ngIf="provincia">
+                <ion-label position="floating">Cantón</ion-label>
+                <ion-select [(ngModel)]="codCanton" interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
+                    <ion-select-option *ngFor="let cant of provincia.canton"
+                                       value="{{cant.codigoCanton}}">{{cant.descripcion}}</ion-select-option>
+                </ion-select>
+            </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Fecha y Hora</ion-label>
-        <ion-datetime [(ngModel)]="fechaBuscar" cancelText="Cancelar" doneText="Aceptar" displayFormat="D MMM YYYY H"></ion-datetime>
-      </ion-item>
-      <ion-button (click)="buscarCanchas()" class="ion-padding" expand="block" color="secondary">BUSCAR</ion-button>
-      <br>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card *ngIf="canchas.length > 0">
-
-    <ion-button (click)="canchas = []" class="ion-padding" expand="block" color="secondary">VOLVER</ion-button>
-
-    <ion-row class="ion-padding-top" *ngFor="let cancha of canchas">
-      <ion-col size="6">
-        <div class="ion-text-center">
-          <img height="100" width="100" [src]="cancha.imagen">
-          <h4 class="ion-no-margin">{{cancha.nombre}}</h4>
-          <p class="ion-text-start ion-no-margin">Direcion: {{cancha.direccion}}</p>
-        </div>
-      </ion-col>
-      <ion-col size="6">
-        <div class="ion-text-start">
-          <p class="ion-no-margin">Árbitro: NO</p>
-          <p class="ion-no-margin">Parqueo: SI</p>
-          <p class="ion-no-margin">Vestidor: SI</p>
-          <p class="ion-no-margin">Uniforme: NO</p>
-          <p class="ion-no-margin">Costo equipo: ₡10,000</p>
-          <p class="ion-no-margin">Método de Pago: en sitio</p>
-          <div class="ion-padding-top">
-            <ion-button fill="outline" slot="end" (click)="solicitar(cancha)">
-              Solicitar
+            <ion-item>
+                <ion-label position="floating">Fecha y Hora</ion-label>
+                <ion-datetime [(ngModel)]="fechaBuscar" cancelText="Cancelar" doneText="Aceptar"
+                              displayFormat="D MMM YYYY H"></ion-datetime>
+            </ion-item>
+            <ion-button (click)="buscarCanchas()" class="ion-padding" expand="block" color="secondary">BUSCAR
             </ion-button>
-          </div>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-card>
+            <br>
+        </ion-card-content>
+    </ion-card>
+
+
+    <ion-card *ngIf="canchas.length > 0">
+
+        <ion-card-header class="ion-text-center">
+            <ion-card-title>Canchas disponibles</ion-card-title>
+        </ion-card-header>
+
+        <ion-card-content>
+
+            <div class="ion-padding-top" *ngFor="let cancha of canchas">
+                <ion-row class="">
+                    <ion-col size="6">
+                        <div class="ion-text-center">
+                            <img height="90" width="100" [src]="cancha.imagen">
+                            <h4 class="ion-text-center ion-no-margin"><strong>{{cancha.nombre}}</strong></h4>
+                            <p class="ion-text-start ion-no-margin"><strong>Pago:</strong> en sitio</p>
+                            <p class="ion-text-start ion-no-margin"><strong>Direción:</strong> {{cancha.direccion}}</p>
+                        </div>
+                    </ion-col>
+                    <ion-col size="6">
+                        <div>
+                            <p class="ion-text-start ion-no-margin"><strong>Costo:</strong> ₡{{cancha.montoEquipo}}</p>
+                            <p class="ion-text-start ion-no-margin">
+                                <strong>Árbitro:</strong> {{cancha.arbitro ? 'SI' : 'NO'}}</p>
+                            <p class="ion-text-start ion-no-margin">
+                                <strong>Parqueo:</strong> {{cancha.parqueo ? 'SI' : 'NO'}}</p>
+                            <p class="ion-text-start ion-no-margin">
+                                <strong>Bestidor:</strong> {{cancha.bestidor ? 'SI' : 'NO'}}</p>
+                            <p class="ion-text-start ion-no-margin">
+                                <strong>Uniforme:</strong> {{cancha.uniforme ? 'SI' : 'NO'}}</p>
+                            <div class="ion-text-center ion-padding-top">
+                                <ion-button fill="outline" slot="end" (click)="solicitar(cancha)">
+                                    Solicitar
+                                </ion-button>
+                            </div>
+                        </div>
+                    </ion-col>
+                </ion-row>
+
+            </div>
+        </ion-card-content>
+
+    </ion-card>
+
+
+    <ion-button *ngIf="canchas.length > 0" (click)="canchas = []" class="ion-padding" expand="block" color="secondary">
+        VOLVER
+    </ion-button>
 
 
 </ion-content>
