--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -136,7 +136,7 @@
                     <ion-col size="6">
                         <ion-item class="ion-no-padding">
                             <ion-label>Vestidor</ion-label>
-                            <ion-toggle name="bestidor" [(ngModel)]="canchaObjeto.bestidor"></ion-toggle>
+                            <ion-toggle name="bestidor" [(ngModel)]="canchaObjeto.vestidor"></ion-toggle>
                         </ion-item>
                     </ion-col>
                 </ion-row>
