--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,7 +8,7 @@
 <br>
 <div style="text-align: center !important;">
 
-  <img src="../../../../assets/img/appicon.png" style="height: 70px; width: 70px;"/>
+  <img src="../../../../assets/img/appicon.png" style="height: 70px; width: 70px;" alt="logo"/>
 
 </div>
 
