--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -10,12 +10,12 @@
  
   
   
-  <div class="ion-text-center"><img src="https://firebasestorage.googleapis.com/v0/b/soccermatch-43e4e.appspot.com/o/SoccerMatchStorage%2F1583696591561_IMG-20200305-WA0055.jpg?alt=media&token=88f63c55-531b-47ca-871f-c1e2beb770d5" alt="" style="width: 100px; height: 100px;"></div>
+  <div class="ion-text-center"><img src="https://i.pinimg.com/originals/d1/1a/45/d11a452f5ce6ab534e083cdc11e8035e.png" alt="" style="width: 100px; height: 100px;"></div>
  
-  <ion-item>
-    <ion-label position="floating">Id</ion-label>
-    <ion-input [(ngModel)]="usuario.id"></ion-input>
-  </ion-item>
+  <!--<ion-item>-->
+    <!--<ion-label position="floating">Id</ion-label>-->
+    <!--<ion-input [(ngModel)]="usuario.id"></ion-input>-->
+  <!--</ion-item>-->
 
   <ion-item>
     <ion-label position="floating">Nombre</ion-label>
@@ -27,7 +27,7 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating">Correo</ion-label>
-    <ion-input [(ngModel)]="usuario.correo"></ion-input>
+    <ion-input [(ngModel)]="usuario.email"></ion-input>
   </ion-item>
 
   <ion-item>
