--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -6,22 +6,23 @@
 
 <ion-content>
 
-   <ion-card>
-    <ion-card-content>
-      <ion-list>
-        <ion-item *ngFor="let retos of retos">
-          <ion-label>
-            <h2>{{retos.region}}</h2>
-            <h3>{{retos.summary}}</h3>
-          </ion-label>
-          <ion-button fill="outline" slot="end">
-            Ver
-          </ion-button>
-        </ion-item>
+  <h1 class="ion-text-center">RETOS</h1>
+   <!--<ion-card>-->
+    <!--<ion-card-content>-->
+      <!--<ion-list>-->
+        <!--<ion-item *ngFor="let retos of retos">-->
+          <!--<ion-label>-->
+            <!--<h2>{{retos.region}}</h2>-->
+            <!--<h3>{{retos.summary}}</h3>-->
+          <!--</ion-label>-->
+          <!--<ion-button fill="outline" slot="end">-->
+            <!--Ver-->
+          <!--</ion-button>-->
+        <!--</ion-item>-->
 
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
+      <!--</ion-list>-->
+    <!--</ion-card-content>-->
+  <!--</ion-card>-->
 
   <!-- <div style="height:30%;
   background-color: #003300;
