nuevos campos al usuario

--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -42,6 +42,31 @@
     <ion-input [(ngModel)]="usuario.telefono" [disabled]="editar"></ion-input>
   </ion-item>
 
+  <ion-item>
+    <ion-label position="floating">Sexo</ion-label>
+    <ion-input [(ngModel)]="usuario.sexo" [disabled]="editar"></ion-input>
+  </ion-item>
+
+  <ion-row>
+    <ion-col size="6">
+        <ion-item class="ion-no-padding">
+            <ion-label>Estado</ion-label>
+            <ion-toggle name="estado" [(ngModel)]="usuario.estado" [disabled]="editar"></ion-toggle>
+        </ion-item>
+    </ion-col>
+</ion-row>
+
+<ion-item>
+  <ion-label position="floating">Dias</ion-label>
+  <ion-select multiple="true" name="dias" [(ngModel)]="usuario.dias" required
+              interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
+      <ion-select-option *ngFor="let dia of dias" value="{{dia}}">{{dia}}</ion-select-option>
+  </ion-select>
+</ion-item>
+
+  
+ 
+
 
     <ion-button class="ion-padding" expand="block" color="secondary" (click)="editarPerfil()">
       {{this.editar ? 'EDITAR' : 'GUARDAR'}}
