--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,15 @@
 {
   padding-bottom: 0 !important;
 }
+
+.modal80 {
+  height: 80%;
+  width: 80%;
+}
+
+//div.modal-wrapper.md.sc-ion-modal-md {
+//  height: 80%;
+//  width: 80%;
+//}
+
+
