--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -35,7 +35,7 @@
   </ion-button> -->
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="mostrarModal()" color="">
+    <ion-fab-button (click)="mostrarModal()" color="secondary">
       <ion-icon md="add-circle-sharp"></ion-icon>
     </ion-fab-button>
   </ion-fab>
