--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,20 +29,20 @@
   --ion-color-tertiary-tint: #f5b255;
 
   /** success **/
-  --ion-color-success: #10dc60;
+  --ion-color-success: #4CAF50;
   --ion-color-success-rgb: 16,220,96;
   --ion-color-success-contrast: #fff;
   --ion-color-success-contrast-rgb: 255,255,255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
+  --ion-color-success-shade: #4CAF50;
+  --ion-color-success-tint: #4CAF50;
 
   /** warning **/
-  --ion-color-warning: #ffce00;
+  --ion-color-warning: #FF9800;
   --ion-color-warning-rgb: 255,206,0;
   --ion-color-warning-contrast: #000;
   --ion-color-warning-contrast-rgb: 0,0,0;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
+  --ion-color-warning-shade: #FF9800;
+  --ion-color-warning-tint: #FF9800;
 
   /** danger **/
   --ion-color-danger: #f53d3d;
