--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -9,9 +9,15 @@
 
 <ion-content>
 
+
+    <div class="ion-text-center" *ngIf="reservas.length === 0">
+        <h1>No hay resultados</h1>
+        <hr>
+    </div>
+
     <div *ngFor="let reserva of reservas">
 
-        <ion-grid class="ion-no-padding-top">
+        <ion-grid class="ion-no-padding">
             <ion-row class="">
                 <ion-col size="3">
                     <div class="ion-text-center">
@@ -24,7 +30,7 @@
                     </div>
                 </ion-col>
                 <ion-col size="9">
-                    <ion-card style="height: 90px">
+                    <ion-card style="height: 95px">
 
 
                         <ion-row class="">
@@ -43,7 +49,7 @@
                             <ion-col size="4">
                                 <ion-row>
                                     <ion-button fill="outline" color="light">
-                                        <ion-icon color="success" md="person-outline"></ion-icon>
+                                        <ion-icon color="success" md="person-add-sharp"></ion-icon>
                                     </ion-button>
                                 </ion-row>
                                 <ion-row>
