Borrar codigo compilado

--- a/src/app/pages/maintenance/clientes/clientes.page.html
+++ b/src/app/pages/maintenance/clientes/clientes.page.html
@@ -17,7 +17,7 @@
             <h3></h3>
             <p>{{usuario.email}}</p>
           </ion-label>
-          <ion-button fill="outline" slot="end" (click)="deshabilitar(cliente);">
+          <ion-button fill="outline" slot="end">
             Eliminar
           </ion-button>
         </ion-item>
@@ -27,7 +27,7 @@
 
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="mostrarModal()" color="secondary">
+    <ion-fab-button color="secondary">
       <ion-icon md="add-circle-sharp"></ion-icon>
     </ion-fab-button>
   </ion-fab>
